--- a/general/css/index.css
+++ b/general/css/index.css
@@ -5,10 +5,10 @@ body {
     margin: 0;
     background-color: #171717; /* Dark background */
     height: 100vh;
-    font-family: 'Inter' sans-serif;
+    font-family: 'Inter', sans-serif;
     color: #ffffff; /* White text color */
     opacity: 0; /* Start with invisible text */
-    animation: fadeIn 2.5s forwards; /* Fade-in animation for the page */
+    animation: fadeIn 2s forwards; /* Fade-in animation for the page */
 }
 
 @keyframes fadeIn {
@@ -171,7 +171,7 @@ border: none;
     width: 170px;
 }
 .button:hover{
-    background-color: #454545;
+    background-color: #333333;
     transform: translateY(-5px);     
     box-shadow: 0px 12px 36px rgba(0, 0, 0, 0.5); /* Slightly increase shadow on lift */
 }
