--- a/general/css/index.css
+++ b/general/css/index.css
@@ -28,6 +28,7 @@ body {
     z-index: 1; /* Ensure text is above the particles */
     position: relative; /* Position relative to the navbar */
     margin-top: 100px; /* Space below the navbar */
+    display: inline-block;
 }
 
 @keyframes textFadeIn {
@@ -394,12 +395,12 @@ option{
 }
 #user-input:hover{
     box-shadow: 0 2px 10px rgb(80, 80, 80);
-    transform: translateY(-5px);
+    transform: translateY(-3px);
 
 }
 #user-input:focus{
     box-shadow: 0 2px 10px rgb(80, 80, 80);
-    transform: translateY(-5px);
+    transform: translateY(-3px);
 
 }
 #send-button {
@@ -415,7 +416,7 @@ option{
 }
 #send-button:hover{
     box-shadow: 0 2px 10px rgb(80, 80, 80);
-    transform: translateY(-5px);
+    transform: translateY(-3px);
 }
 .text {
     font-weight: 700;
