--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -3,7 +3,7 @@
 body {
     user-select: none;
     margin: 0;
-    background: linear-gradient(-45deg, #1c1c1c, #343434, #3232327a, #1d1d1d);
+    background: linear-gradient(-45deg, #1c1c1c, #202020, #3232327a, #1d1d1d);
     height: 100vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -13,6 +13,17 @@ body {
     color: #ffffff; /* White text color */
     opacity: 0; /* Start with invisible text */
     animation: linear-gradient 8s ease, fadeIn 2s forwards; /* Fade-in animation for the page */
+}
+@keyframes gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 @keyframes fadeIn {
