--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -49,7 +49,7 @@ body {
 }
 #splash{
     user-select: none;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Inter', sans-serif;
 text-align: center;
 font-weight: 700;
 font-size: 2em;
