--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -72,7 +72,8 @@ nav {
     transform: translateX(-50%); /* Offset the navbar by 50% of its own width */
     width: 80%; 
     padding: 20px; /* Padding for the navbar */
-    background-color: #1b1b1be4; /* Dark background */
+    background-color: rgba(10, 10, 10, 0.7);    
+  backdrop-filter: blur(5px);
     color: white; /* Text color */
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
@@ -264,7 +265,8 @@ display: none;
 .search-bar input {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     outline: none;
-    background-color: #1d1d1d; /* Dark background */
+    background-color: rgba(10, 10, 10, 0.5);    
+    backdrop-filter: blur(5px);
 	width: 50%;
 	padding: 10px;
 	border: none;
@@ -285,7 +287,8 @@ display: none;
 .search-bar button {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     font-family: 'Montserrat', sans-serif;
-    background-color: #1d1d1d; /* Dark background */
+    background-color: rgba(10, 10, 10, 0.5);    
+    backdrop-filter: blur(5px);
 	padding: 10px 20px;
 	margin-left: 10px;
 	border: none;
@@ -301,7 +304,8 @@ display: none;
 	background-color: #606060;
 }
 select{
-    background-color: #1d1d1d; /* Dark background */
+    background-color: rgba(10, 10, 10, 0.5);    
+    backdrop-filter: blur(5px);
 	border: none;
 	color: white;
 	border-radius: 10px;
