--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -281,7 +281,32 @@ display: none;
 	color: #aaaaaa;
 	font-family: 'Montserrat', sans-serif;
 }
+.search-bar {
+	display: flex;
+	justify-content: center;
+	padding: 20px;
+}
 
+.search input {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    outline: none;
+    background-color: #1d1d1d; /* Dark background */
+	width: 50%;
+	padding: 20px;
+	border: none;
+	border-radius: 10px;
+	font-size: 16px;
+	color: #ffffff;
+    transition: all 0.3s ease;
+}
+.search input:focus{
+    background-color:rgba(74, 74, 74, 0.2); /* Dark background */
+    box-shadow: 0 2px 10px rgba(74, 74, 74, 0.2);
+}
+.search input::placeholder {
+	color: #aaaaaa;
+	font-family: 'Montserrat', sans-serif;
+}
 .search-bar button {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     font-family: 'Montserrat', sans-serif;
