--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -96,6 +96,7 @@ nav:hover {
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
 }
 .left-link:hover{
+    transform: scale(1.05);
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
     transform: translate(0px , -3px);
 }
@@ -110,10 +111,11 @@ nav:hover {
     margin-left: 20px; /* Space between right links */
     padding: 10px 15px;
     border-radius: 5px; /* Rounded corners */
-    transition: background-color 0.3s; /* Smooth background transition */
+    transition: transform 0.3s, background-color 0.3s; /* Smooth background transition */
 }
 
 .nav-links a:hover {
+    transform: scale(1.05);
     background-color: rgba(255, 255, 255, 0.2); /* Hover effect */
 }
 .game-features-container {
@@ -376,7 +378,7 @@ option{
     font-weight: 700;
    background-color: #262626;
     margin: 10px;
-    height: 480px;
+    height: 500px;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -482,6 +484,7 @@ option{
 }
 
 #gameName, #gameUrl {
+    color: white;
     box-shadow: 0 2px 10px rgb(78, 78, 78);
     outline: none;
     width: 100%;
@@ -494,7 +497,7 @@ option{
 
 #melt {
     width: 100%;
-    padding: 10px;
+    padding: 20px;
     background-color: #535353;
     color: white;
     border: none;
