--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -403,7 +403,7 @@ option{
     padding: 20px; /* Padding inside the chat container */
 }
 #chat-box {
-    user-select: all;
+    user-select:auto;
     box-shadow: 0 2px 10px rgb(61, 61, 61);
     background-color: #333; /* Input background */
     border: 2px solid #444; /* Darker border */
@@ -414,7 +414,7 @@ option{
     border-radius: 10px; /* Rounded corners for chat box */
     transition: all 0.5s ease;
 }
-#chat-box{
+#chat-box:hover{
     transform: translateY(-2px);
     box-shadow: 0 2px 10px rgb(69, 69, 69);
 }
@@ -807,3 +807,29 @@ margin-top: 5.208vw;
     height: 0;
   }
   
+  .gamesh11{
+    width: 60%;
+    margin-left: 20%;
+    margin-right: 20%;
+    color: black;
+ }
+.browse-games{
+    border: none;
+    height: 50px;
+    width: 150px;
+    background-color: #333;
+    color: white;
+    border-radius: 8px;
+    box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease;
+}
+.browse-games:hover{
+    background-color: #434343;
+}
+.gamesh111{
+    box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
+    border-radius: 10px;
+    padding: 20px;
+    background-color: #333;
+    color: white;
+}
