--- a/assets/template/appselection.html
+++ b/assets/template/appselection.html
@@ -62,7 +62,9 @@
         </nav>
     <br>
     <br>
-
+    <br>
+    <br>
+    <br>
 <div class="gamesh11">
     <div class="gamesh111">
     <h1 class="text">All Apps</h1>
@@ -72,7 +74,7 @@
     </div>
     <br>
     <div class="gamesh111">
-    <h1 class="text">Shortcuts</h1>
+    <h1 class="textt">Shortcuts</h1>
     <p class="descrip">Relive the good times. Many old flash games are here. Dive into an old collection of games such as Raft Wars, The World's Hardest Game, The Impossible Quiz, And learn to fly! Play them all before Flash ended.</p>
     <a href="#soon">
     <button class="browse-games">Browse shortcuts</button></a>
