--- a/assets/template/appselection.html
+++ b/assets/template/appselection.html
@@ -67,7 +67,7 @@
     <br>
 <div class="gamesh11">
     <div class="gamesh111">
-    <h1 class="text">All Apps</h1>
+    <h1 class="textt">All Apps</h1>
     <p class="descrip">Discover a diverse collection of fan-favorite games like Retro Bowl, PolyTrack, Monkey Mart, and Drive Mad! Whether you love action-packed adventures, fun simulators, or laid-back gaming experiences, this section has it all!</p>
     <a href="/all/">
     <button class="browse-games"> Browse all Utilities </button></a>
@@ -81,12 +81,19 @@
     </div>
     <br>
     <div class="gamesh111">
-    <h1 class="text">Infstore</h1>
+    <h1 class="textt">Infstore</h1>
     <p class="descrip">
         Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
     <a href="#soon">
     <button class="browse-games">Browse Infstore</button></a>
     </div>
+    <div class="gamesh111">
+        <h1 class="textt">Chatroom</h1>
+        <p class="descrip">
+            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
+        <a href="#soon">
+        <button class="browse-games">Browse Chatroom</button></a>
+        </div>
     </div>
     </body>
 </html><script src="/general/js/cloak.js"></script>
