--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -98,7 +98,6 @@ nav:hover {
 .left-link:hover{
     transform: scale(1.05);
     transition: transform 0.3s, box-shadow 0.3s; /* Smooth transition for lift effect and shadow */
-    transform: translate(0px , -3px);
 }
 
 .nav-links {
@@ -817,19 +816,20 @@ margin-top: 5.208vw;
     border: none;
     height: 50px;
     width: 150px;
-    background-color: #333;
+    background-color: #1d1d1d;
     color: white;
     border-radius: 8px;
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     transition: all 0.3s ease;
 }
 .browse-games:hover{
-    background-color: #434343;
+    transform: scale(1.05);
+    background-color: #222222;
 }
 .gamesh111{
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
     padding: 20px;
-    background-color: #333;
+    background-color: #171717;
     color: white;
 }
