--- a/assets/template/searchselection.html
+++ b/assets/template/searchselection.html
@@ -15,7 +15,7 @@
          <meta charset="UTF-8">
          <meta name="keywords" content="starlight, proxy, unblocked, unblock, unblocked games, unblocking, proxies, starlight proxy, games unblocked, youtube unblocked, tiktok unblocked, youtube, tiktok, how to play unblocked games at school, games, online games, fortnite games unblocked, nowgg unblocked, nowgg alt links, nowgg, geforce now unblocked, geforcenow, geforce unblocked, geforcenow unblocked, geforce unblocked, play games, unblocked games for school, Unblocked, Games, Proxy, News, Source, Unblocking, Access, Online, Security, VPN, Browsing, Free, Play, Internet, Tools, Speed, Stream, Services, Websites, Anonymous, Privacy, Download, Connect, Network, Game List, Educational, Safe, Explore, Entertainment, Platform, User-Friendly, Experience, Content, Support, Community, Features, Compatibility, Fast, Reliable, Bypass, Filters, Restrictions, Mobile, Desktop, Gaming Hub, Reviews, Ratings, Updates, Tutorials, Guides, Forum, Discussion, Tips, Tricks, Resources, Insights, Feedback, Events, Contests, Challenges, Multiplayer, Strategy, Adventure, Simulation, Action, Casual, Puzzle, Platformer, Arcade, Retro, New Releases, Downloads, User Reviews, Popular, Trending, Favorites, Highlights, Recommendations, Profiles, Achievements, Leaderboards, Quests, Cooperative, Solo, Community Events, Playlists, Scoring, Game Development, Live Events, Streaming, Collaborations, Game Modes, Beta Testing, Special Offers, Promotions, Discounts.">
          <meta name="author" content="Enterheadlines">
-         <title>Starlight - Utilities</title>
+         <title>Starlight - Search</title>
          <meta name="description" content=" Starlight is your all-in-one platform for utilities, hacks, games, and proxies, designed to enhance your online experience and unlock limitless possibilities!">
          <link rel="icon" href="/assets/images/offical/starlight.png" type="image/x-icon">
          <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -45,6 +45,7 @@
 </script>
     </head>
     <body>
+      
         <script src="/assets/js/global.js"></script>
         <script src="/assets/js/eruda.js"></script>
         <script>eruda.init();</script>
@@ -60,62 +61,39 @@
                 <a href="/assets/html/settings.html"><img src="/assets/images/navicons/settings.png" height="12px" width="12px">&nbsp;Settings</a>
             </div>
         </nav>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-<div class="gamesh11">
-    <div class="gamesh111">
-    <h1 class="textt">All Apps</h1>
-    <p class="descrip">Discover a diverse collection of fan-favorite games like Retro Bowl, PolyTrack, Monkey Mart, and Drive Mad! Whether you love action-packed adventures, fun simulators, or laid-back gaming experiences, this section has it all!</p>
-    <a href="/all/">
-    <button class="browse-games"> Browse all Utilities </button></a>
-    </div>
-    <br>
-    <div class="gamesh111">
-    <h1 class="textt">Shortcuts</h1>
-    <p class="descrip">Relive the good times. Many old flash games are here. Dive into an old collection of games such as Raft Wars, The World's Hardest Game, The Impossible Quiz, And learn to fly! Play them all before Flash ended.</p>
-    <a href="#soon">
-    <button class="browse-games">Browse shortcuts</button></a>
-    </div>
-    <br>
-    <div class="gamesh111">
-    <h1 class="textt">Infstore</h1>
-    <p class="descrip">
-        Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
-    <a href="#soon">
-    <button class="browse-games">Browse Infstore</button></a>
-    </div>
-    <br>
-    <div class="gamesh111">
-        <h1 class="textt">Chatroom</h1>
-        <p class="descrip">
-            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
-        <a href="#soon">
-        <button class="browse-games">Browse Chatroom</button></a>
-        </div>
-    </div>
-    <br>
-    <div class="gamesh111">
-        <h1 class="textt">Videos</h1>
-        <p class="descrip">
-            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
-        <a href="#soon">
-        <button class="browse-games">Browse Videos</button></a>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+    <div class="gamesh11">
+        <div class="gamesh111">
+        <h1 class="textt">All Searchs</h1>
+        <p class="descrip">Discover a diverse collection of fan-favorite games like Retro Bowl, PolyTrack, Monkey Mart, and Drive Mad! Whether you love action-packed adventures, fun simulators, or laid-back gaming experiences, this section has it all!</p>
+        <a href="/all/">
+        <button class="browse-games"> Browse all searchs </button></a>
         </div>
         <br>
         <div class="gamesh111">
-            <h1 class="textt">Music</h1>
-            <p class="descrip">
-                Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
-            <a href="#soon">
-            <button class="browse-games">Browse Music</button></a>
-            </div>
+        <h1 class="textt">Proxy</h1>
+        <p class="descrip">Relive the good times. Many old flash games are here. Dive into an old collection of games such as Raft Wars, The World's Hardest Game, The Impossible Quiz, And learn to fly! Play them all before Flash ended.</p>
+        <a href="#soon">
+        <button class="browse-games">Browse Proxy</button></a>
         </div>
-    </div>
+        <br>
+        <div class="gamesh111">
+        <h1 class="textt">Search Engine</h1>
+        <p class="descrip">
+            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
+        <a href="#soon">
+        <button class="browse-games">Browse Search Engine</button></a>
+        </div>
+        <br>
+        </div>
+     
     </body>
 </html><script src="/general/js/cloak.js"></script>
+   
      <script>
         let deferredPrompt;
         window.addEventListener('beforeinstallprompt', (e) => {
@@ -128,5 +106,6 @@
         <script src="/assets/js/filtergames.js"></script>
         <script src="/assets/js/search.js"></script>
         <script src="/assets/js/settings.js"></script>
+
         <script src="/assets/js/particlecode.js"></script>
         <script src="/assets/js/particles.js"></script>
