--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -432,7 +432,7 @@ option{
     padding-top: 30px;
     padding: 20px;
     flex-grow: 1; /* Allow chat box to grow */
-    border-radius: 15px; /* Rounded corners for chat box */
+    border-radius: 13px; /* Rounded corners for chat box */
     transition: all 0.5s ease;
 }
 #chat-box:hover{
@@ -447,7 +447,7 @@ option{
     border: 2px rgb(50, 50, 50) solid;
     background-color: #333; /* Input background */
     color: #ffffff; /* Input text color */
-    border-radius: 10px; /* Rounded corners */
+    border-radius: 5px; /* Rounded corners */
     margin: 10px 0; /* Margin for spacing */
     transition: all 0.5s ease;
 }
@@ -838,7 +838,7 @@ margin-top: 5.208vw;
     border: none;
     height: 50px;
     width: 150px;
-    background-color: #1d1d1d;
+    background-color: #1b1b1be4; /* Dark background */
     color: white;
     border-radius: 8px;
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
