--- a/assets/template/appselection.html
+++ b/assets/template/appselection.html
@@ -95,16 +95,6 @@
         <a href="#soon">
         <button class="browse-games">Browse Chatroom</button></a>
         </div>
-    </div>
-    <br>
-    <div class="gamesh111">
-        <h1 class="textt">Videos</h1>
-        <p class="descrip">
-            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
-        <a href="#soon">
-        <button class="browse-games">Browse Videos</button></a>
-        </div>
-        <br>
         <div class="gamesh111">
             <h1 class="textt">Music</h1>
             <p class="descrip">
@@ -113,7 +103,18 @@
             <button class="browse-games">Browse Music</button></a>
             </div>
         </div>
+    </div> <div class="gamesh111">
+        <h1 class="textt">Videos</h1>
+        <p class="descrip">
+            Indulge in a wave of nostalgia with old gba games! Relive the excitement with timeless titles like Super Street Fighter 2 Turbo Revival, Pokemon Sapphire, Mario Kart Super Circuit, and more! If you have a passion for retro gaming, this section is a must-visit for you!</p>
+        <a href="#soon">
+        <button class="browse-games">Browse Videos</button></a>
+        </div>
+        <br>
     </div>
+    <br>
+    
+    
     </body>
 </html><script src="/general/js/cloak.js"></script>
      <script>
