--- a/assets/template/appselection.html
+++ b/assets/template/appselection.html
@@ -112,8 +112,8 @@
         </div>
         <br>
     </div>
+</div>
     <br>
-    
     
     </body>
 </html><script src="/general/js/cloak.js"></script>
