--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -838,7 +838,7 @@ margin-top: 5.208vw;
     border: none;
     height: 50px;
     width: 150px;
-    background-color: #343434e4; /* Dark background */
+    background-color: #2b2b2be4; /* Dark background */
     color: white;
     border-radius: 8px;
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
@@ -852,6 +852,11 @@ margin-top: 5.208vw;
     box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.4);
     border-radius: 10px;
     padding: 20px;
-    background-color: #292929e4; /* Dark background */
+    background-color: #1f1f1fe4; /* Dark background */
     color: white;
+    transition: all 0.3s ease;
+}
+.gamesh111{
+    background-color: #161616e4; /* Dark background */
+    transform: translateY(-3px);
 }
